[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "getbased-rag"
version = "0.1.0"
description = "getbased-rag — standalone RAG knowledge server (formerly the Electron-bundled Lens)"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "qdrant-client>=1.9",
    "sentence-transformers>=2.6",
    "typer>=0.12",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
pdf = ["PyPDF2>=3.0"]
docx = ["python-docx>=1.0"]
onnx = [
    "onnxruntime>=1.17",
    "optimum[onnxruntime]>=1.17",
    "transformers>=5.0.0rc3",
]
full = ["PyPDF2>=3.0", "python-docx>=1.0", "onnxruntime>=1.17", "optimum[onnxruntime]>=1.17", "transformers>=5.0.0rc3"]
test = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
lens = "lens.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
